build/log/idf_py_stdout_output_1739459
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/build/bootloader/esp-idf/esptool_py && /home/phil/mambaforge/envs/python310/bin/python /home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/build/bootloader/bootloader.bin
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/radio.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/radio.c.obj 
/home/phil/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/build/config -I/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main -I/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/newlib/platform_include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/config/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/config/include/freertos -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/config/xtensa/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/freertos/esp_additions/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/include/soc -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/dma/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/ldo/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/debug_probe/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/port/esp32/. -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_hw_support/port/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/heap/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/heap/tlsf -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/log/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/soc/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/soc/esp32 -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/soc/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/soc/esp32/register -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/hal/platform_port/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/hal/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/hal/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_rom/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_rom/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_rom/esp32 -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_common/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_system/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_system/port/soc -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_system/port/include/private -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/xtensa/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/xtensa/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/xtensa/deprecated_include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/include/apps -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/include/apps/sntp -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/lwip/src/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/port/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/port/freertos/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/port/esp32xx/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/include/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/common/osi/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/common/api/include/api -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/common/btc/profile/esp/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/common/hci_log/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/host/bluedroid/api/include/api -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/bt/porting/ext/tinycrypt/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_timer/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_wifi/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_wifi/include/local -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_wifi/wifi_apps/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_event/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_phy/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_phy/esp32/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_netif/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/nvs_flash/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_partition/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/spiffs/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_http_client/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_driver_gpio/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/esp_driver_uart/include -I/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf/components/vfs/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Os -freorder-blocks -fmacro-prefix-map=/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio=. -fmacro-prefix-map=/home/phil/work/esp32/esp32_btaudio4/esp-adf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/radio.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/radio.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/radio.c.obj -c /home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main/radio.c
/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main/radio.c: In function 'radio_stop':
/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main/radio.c:257:10: error: implicit declaration of function 'take_bt_resource_mutex' [-Wimplicit-function-declaration]
  257 |     if (!take_bt_resource_mutex(pdMS_TO_TICKS(100))) {
      |          ^~~~~~~~~~~~~~~~~~~~~~
/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main/radio.c:258:13: error: 's_bt_mutex_owner' undeclared (first use in this function)
  258 |         if (s_bt_mutex_owner != NULL) {
      |             ^~~~~~~~~~~~~~~~
/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main/radio.c:258:13: note: each undeclared identifier is reported only once for each function it appears in
/home/phil/work/esp32/esp32_btaudio4/esp32_btaudio/main/radio.c:268:9: error: implicit declaration of function 'give_bt_resource_mutex' [-Wimplicit-function-declaration]
  268 |         give_bt_resource_mutex();
      |         ^~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
